--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -85,7 +85,7 @@ jobs:
         working-directory: ./build
         run: |
           cmake -DCMAKE_BUILD_TYPE=${{ matrix.config.config }} -DCMAKE_C_COMPILER=gcc-11 -DCMAKE_CXX_COMPILER=g++-11 \
-                -DOPFLOW_WITH_HDF5=ON -DBENCHMARK_ENABLE_TESTING=OFF -DOPFLOW_BUILD_ALL=ON \
+                -DOPFLOW_WITH_HDF5=ON -DBENCHMARK_ENABLE_TESTING=OFF -DOPFLOW_BUILD_ALL=ON -DOPFLOW_INSTALL=OFF \
                 -DOPFLOW_WITH_VTK=OFF -DDOXYGEN_DIR=$(brew --prefix doxygen)/bin ..
           cmake --build . -t AllExamples AllTests AllBenchmarks --parallel ${{ matrix.config.cores }} --config ${{ matrix.config.config }}
       - name: Test
