[Bench] Add Laplace benchmark

--- a/benchmark/Core/CMakeLists.txt
+++ b/benchmark/Core/CMakeLists.txt
@@ -19,3 +19,5 @@ add_bench(AMRFieldAssign AMRFieldAssign.cpp)
 add_bench(AMRMeshBuild AMRMeshBuild.cpp)
 
 add_bench(AMRFieldInit AMRFieldInit.cpp)
+
+add_bench(LaplaceOp LaplaceOp.cpp)
