--- a/test/Core/CMakeLists.txt
+++ b/test/Core/CMakeLists.txt
@@ -37,6 +37,7 @@ add_gmock(RangeReduceTest ${CMAKE_CURRENT_LIST_DIR}/Loops/RangeReduceTest.cpp)
 
 # Parallel
 add_gmock(EvenSplitStrategyTest ${CMAKE_CURRENT_LIST_DIR}/Parallel/EvenSplitStrategyTest.cpp)
+add_gmock_mpi(MPITest 160 ${CMAKE_CURRENT_LIST_DIR}/Parallel/MPITest.cpp)
 
 # Equation
 add_gmock(DircEqnTest ${CMAKE_CURRENT_LIST_DIR}/Equation/DircEqnTest.cpp)
