[Test] Add test for MPI CartesianField Rangecheck

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -59,11 +59,9 @@ function(add_gmock_mpi testname proccount testfile)
     target_compile_definitions(${testname} PUBLIC OPFLOW_DISTRIBUTE_MODEL_MPI)
     set_property(GLOBAL APPEND PROPERTY all_test_srcs ${testfile} ${ARGN})
     add_dependencies(AllTests ${testname})
-    if (proccount GREATER_EQUAL MPIEXEC_MAX_NUMPROCS)
+    if (proccount GREATER MPIEXEC_MAX_NUMPROCS)
         message(WARNING "Given #Proc = ${proccount} > #MaxProc = ${MPIEXEC_MAX_NUMPROCS}. Reset to ${MPIEXEC_MAX_NUMPROCS}")
         set(proccount ${MPIEXEC_MAX_NUMPROCS})
-    else ()
-        message(STATUS "${proccount} ${MPIEXEC_MAX_NUMPROCS}")
     endif ()
     if (NOT ${testname} STREQUAL "UniTests")
         add_test(NAME ${testname} COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${proccount}
