[Test] Add test for AMGCL CSR matrix form

--- a/test/Core/CMakeLists.txt
+++ b/test/Core/CMakeLists.txt
@@ -40,3 +40,4 @@ add_gmock(EvenSplitStrategyTest ${CMAKE_CURRENT_LIST_DIR}/Parallel/EvenSplitStra
 # Equation
 add_gmock(EqnSolveHandlerTest ${CMAKE_CURRENT_LIST_DIR}/Equation/EqnSolveHandlerTest.cpp)
 add_gmock(PeriodicEqnTest ${CMAKE_CURRENT_LIST_DIR}/Equation/PeriodicEqnTest.cpp)
+add_gmock(AMGCLTest ${CMAKE_CURRENT_LIST_DIR}/Equation/AMGCLTest.cpp)
