--- a/benchmark/Core/CMakeLists.txt
+++ b/benchmark/Core/CMakeLists.txt
@@ -21,3 +21,5 @@ add_bench(AMRMeshBuild AMRMeshBuild.cpp)
 add_bench(AMRFieldInit AMRFieldInit.cpp)
 
 add_bench(LaplaceOp LaplaceOp.cpp)
+
+add_bench(EqnSolve EqnSolve.cpp)
