[CI] Add -VV flag to ctest

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -91,4 +91,4 @@ jobs:
       - name: Test
         working-directory: ./build
         run: |
-          ctest --parallel ${{ matrix.config.cores }} -C ${{ matrix.config.config }}
+          ctest --parallel ${{ matrix.config.cores }} -C ${{ matrix.config.config }} -VV
