[Core] Add EquationHolder

--- a/test/Core/CMakeLists.txt
+++ b/test/Core/CMakeLists.txt
@@ -43,3 +43,4 @@ add_gmock(DircEqnTest ${CMAKE_CURRENT_LIST_DIR}/Equation/DircEqnTest.cpp)
 add_gmock(NeumEqnTest ${CMAKE_CURRENT_LIST_DIR}/Equation/NeumEqnTest.cpp)
 add_gmock(PeriodicEqnTest ${CMAKE_CURRENT_LIST_DIR}/Equation/PeriodicEqnTest.cpp)
 add_gmock(AMGCLTest ${CMAKE_CURRENT_LIST_DIR}/Equation/AMGCLTest.cpp)
+add_gmock(EqnHolderTest ${CMAKE_CURRENT_LIST_DIR}/Equation/EqnHolderTest.cpp)
