[DS] Add tests & benchmarks for stencil pad

--- a/test/DataStructures/CMakeLists.txt
+++ b/test/DataStructures/CMakeLists.txt
@@ -17,3 +17,6 @@ add_gmock(PlainTensorTest ${CMAKE_CURRENT_SOURCE_DIR}/Arrays/PlainTensorTest.cpp
 
 # MDIndex
 add_gmock(MDIndexTest ${CMAKE_CURRENT_SOURCE_DIR}/Index/MDIndexTest.cpp)
+
+# StencilPad
+add_gmock(StencilPadTest ${CMAKE_CURRENT_LIST_DIR}/StencilPadTest.cpp)
