--- a/.github/workflows/AutoFormat.yml
+++ b/.github/workflows/AutoFormat.yml
@@ -9,11 +9,23 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      with:
+        fetch-depth: '5'
+    - name: Update copyright
+      id: copyright
+      working-directory: ./
+      run: |
+        bash scripts/update_copyright.sh
+        if ! git diff --no-ext-diff --quiet --exit-code; then
+          echo ::set-output name=status::"changed"
+        else
+          echo ::set-output name=status::"unchanged"
+        fi
     - name: Autoformat
       id: format
       uses: SKIRT/auto-format@master
     - name: Autocommit
-      if: steps.format.outputs.status == 'changed'
+      if: steps.format.outputs.status == 'changed' || steps.copyright.outputs.status == 'changed'
       run: |
         git config --global user.name 'OpFlow-Guardian'
         git config --global user.email 'guardian@opflow.git'
