[Build] Add find instructions for TBB on installing the package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -212,7 +212,10 @@ target_link_libraries(opflow INTERFACE amgcl::amgcl)
 # Use TBB
 # ----------------------------------------------------------------------------
 if (OPFLOW_TBB_EXTERNAL)
-    find_package(TBB REQUIRED)
+    if (NOT DEFINED TBB_DIR)
+        message(FATAL "Variable TBB_DIR not defined. Use -DTBB_DIR to specify TBB's install path.")
+    endif ()
+    find_package(TBB REQUIRED PATHS ${TBB_DIR})
 else ()
     if (OPFLOW_INSTALL)
         include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/TBBConfig.cmake)
@@ -252,8 +255,11 @@ endif ()
 # Use HYPRE package
 # ----------------------------------------------------------------------------
 if (OPFLOW_HYPRE_EXTERNAL)
+    if (NOT DEFINED HYPRE_DIR)
+        message(FATAL "Variable HYPRE_DIR not set. Use -DHYPRE_DIR to specify HYPRE's install path")
+    endif ()
     # Use external HYPRE
-    find_package(HYPRE REQUIRED)
+    find_package(HYPRE REQUIRED PATHS ${HYPRE_DIR})
     # Here we hard link to the found HYPRE to avoid find again at client
     target_link_libraries(opflow INTERFACE HYPRE)
 else ()
@@ -280,7 +286,10 @@ if (OPFLOW_WITH_VTK)
     target_compile_definitions(opflow INTERFACE OPFLOW_WITH_VTK)
     if (OPFLOW_VTK_EXTERNAL)
         if (NOT TARGET VTK)
-            find_package(VTK REQUIRED)
+            if (NOT DEFINED VTK_DIR)
+                message(FATAL "Variable VTK_DIR not defined. Use -DVTK_DIR to specify VTK's install path")
+            endif ()
+            find_package(VTK REQUIRED PATHS ${VTK_DIR})
             target_compile_definitions(opflow INTERFACE OPFLOW_VTK_EXTERNAL)
         endif ()
     else ()
