[Bench] Add EqnSet benchmark

--- a/benchmark/Core/CMakeLists.txt
+++ b/benchmark/Core/CMakeLists.txt
@@ -23,3 +23,5 @@ add_bench(AMRFieldInit AMRFieldInit.cpp)
 add_bench(LaplaceOp LaplaceOp.cpp)
 
 add_bench(EqnSolve EqnSolve.cpp)
+
+add_bench(EqnSet EqnSet.cpp)
