--- a/cmake/opflowConfig.cmake.in
+++ b/cmake/opflowConfig.cmake.in
@@ -29,7 +29,7 @@ if (OPFLOW_HYPRE_EXTERNAL)
     find_dependency(HYPRE CONFIG PATHS @HYPRE_DIR@)
 else ()
     find_dependency(HYPRE CONFIG
-            PATHS @CMAKE_INSTALL_PREFIX@)
+            PATHS @CMAKE_INSTALL_PREFIX@ NO_DEFAULT_PATH)
 endif ()
 
 # Find VTK
@@ -38,7 +38,7 @@ if (OPFLOW_WITH_VTK)
         find_dependency(VTK CONFIG PATHS @VTK_DIR@)
     else ()
         find_dependency(VTK CONFIG
-                PATHS @CMAKE_INSTALL_PREFIX@)
+                PATHS @CMAKE_INSTALL_PREFIX@ NO_DEFAULT_PATH)
     endif ()
     target_include_directories(opflow INTERFACE ${VTK_INCLUDE_DIRS})
     target_link_directories(opflow INTERFACE ${VTK_LIBRARY_DIRS})
@@ -56,13 +56,13 @@ if (${OPFLOW_WITH_MPI})
 endif ()
 
 # Find AMGCL
-find_dependency(amgcl HINTS @CMAKE_INSTALL_PREFIX@)
+find_dependency(amgcl PATHS @CMAKE_INSTALL_PREFIX@ NO_DEFAULT_PATH)
 
 # Find TBB
 if (OPFLOW_TBB_EXTERNAL)
     find_dependency(TBB CONFIG REQUIRED PATHS @TBB_DIR@)
 else()
-    find_dependency(TBB CONFIG PATHS @CMAKE_INSTALL_PREFIX@)
+    find_dependency(TBB CONFIG PATHS @CMAKE_INSTALL_PREFIX@ NO_DEFAULT_PATH)
 endif()
 
 include("${CMAKE_CURRENT_LIST_DIR}/${OPFLOW_CONFIG_TARGETS_FILE}")
