[CI] Add AMGCLMPITest

--- a/test/Core/CMakeLists.txt
+++ b/test/Core/CMakeLists.txt
@@ -48,3 +48,4 @@ add_gmock(AMGCLTest ${CMAKE_CURRENT_LIST_DIR}/Equation/AMGCLTest.cpp)
 add_gmock(EqnHolderTest ${CMAKE_CURRENT_LIST_DIR}/Equation/EqnHolderTest.cpp)
 add_gmock(CSRMatrixGeneratorTest ${CMAKE_CURRENT_LIST_DIR}/Equation/CSRMatrixGeneratorTest.cpp)
 add_gmock(EqnSetTest ${CMAKE_CURRENT_LIST_DIR}/Equation/EqnSetTest.cpp)
+add_gmock_mpi(AMGCLMPITest 4 ${CMAKE_CURRENT_LIST_DIR}/Equation/AMGCLMPITest.cpp)
