[CI] Add switch for MPI related tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,7 +19,7 @@ endif ()
 
 if (OPFLOW_ENABLE_COVERAGE)
     include(${CMAKE_CURRENT_LIST_DIR}/../cmake/CodeCoverage.cmake)
-else()
+else ()
     function(SETUP_TARGET_FOR_COVERAGE)
     endfunction()
 endif ()
@@ -29,7 +29,11 @@ set_property(GLOBAL PROPERTY all_test_srcs)
 
 add_custom_target(AllTests)
 
-set(TEST_MAIN_CPP ${CMAKE_CURRENT_LIST_DIR}/test_main.cpp)
+if (OPFLOW_WITH_MPI)
+    set(TEST_MAIN_CPP ${CMAKE_CURRENT_LIST_DIR}/test_main_mpi.cpp)
+else ()
+    set(TEST_MAIN_CPP ${CMAKE_CURRENT_LIST_DIR}/test_main.cpp)
+endif ()
 
 function(add_gmock testname testfile)
     add_executable(${testname} EXCLUDE_FROM_ALL ${testfile} ${ARGN} ${TEST_MAIN_CPP})
@@ -56,24 +60,26 @@ if (OPFLOW_WITH_MPI)
 endif ()
 
 function(add_gmock_mpi testname proccount testfile)
-    add_executable(${testname} EXCLUDE_FROM_ALL ${testfile} ${ARGN} ${TEST_MAIN_CPP})
-    target_link_libraries(${testname} gmock opflow::opflow gcov)
-    target_compile_options(${testname} PRIVATE $<$<CXX_COMPILER_ID:GNU>:--coverage>
-            PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fconcepts-diagnostics-depth=5>
-            PRIVATE $<$<CXX_COMPILER_ID:Clang>:-fprofile-instr-generate -fcoverage-mapping>)
-    target_compile_definitions(${testname} PUBLIC OPFLOW_DISTRIBUTE_MODEL_MPI)
-    set_property(GLOBAL APPEND PROPERTY all_test_srcs ${testfile} ${ARGN})
-    add_dependencies(AllTests ${testname})
-    if (proccount GREATER MPIEXEC_MAX_NUMPROCS)
-        message(WARNING "Given #Proc = ${proccount} > #MaxProc = ${MPIEXEC_MAX_NUMPROCS}. Reset to ${MPIEXEC_MAX_NUMPROCS}")
-        set(proccount ${MPIEXEC_MAX_NUMPROCS})
-    endif ()
-    if (NOT ${testname} STREQUAL "UniTests")
-        add_test(NAME ${testname} COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${proccount}
-                ${MPIEXEC_PREFLAGS} ${CMAKE_CURRENT_BINARY_DIR}/${testname} ${MPIEXEC_POSTFLAGS})
-    endif ()
-    if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
-        SETUP_TARGET_FOR_COVERAGE(${testname}_coverage ${testname} ${testname}_coverage)
+    if (OPFLOW_WITH_MPI)
+        add_executable(${testname} EXCLUDE_FROM_ALL ${testfile} ${ARGN} ${TEST_MAIN_CPP})
+        target_link_libraries(${testname} gmock opflow::opflow gcov)
+        target_compile_options(${testname} PRIVATE $<$<CXX_COMPILER_ID:GNU>:--coverage>
+                PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fconcepts-diagnostics-depth=5>
+                PRIVATE $<$<CXX_COMPILER_ID:Clang>:-fprofile-instr-generate -fcoverage-mapping>)
+        target_compile_definitions(${testname} PUBLIC OPFLOW_DISTRIBUTE_MODEL_MPI)
+        set_property(GLOBAL APPEND PROPERTY all_test_srcs ${testfile} ${ARGN})
+        add_dependencies(AllTests ${testname})
+        if (proccount GREATER MPIEXEC_MAX_NUMPROCS)
+            message(WARNING "Given #Proc = ${proccount} > #MaxProc = ${MPIEXEC_MAX_NUMPROCS}. Reset to ${MPIEXEC_MAX_NUMPROCS}")
+            set(proccount ${MPIEXEC_MAX_NUMPROCS})
+        endif ()
+        if (NOT ${testname} STREQUAL "UniTests")
+            add_test(NAME ${testname} COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${proccount}
+                    ${MPIEXEC_PREFLAGS} ${CMAKE_CURRENT_BINARY_DIR}/${testname} ${MPIEXEC_POSTFLAGS})
+        endif ()
+        if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+            SETUP_TARGET_FOR_COVERAGE(${testname}_coverage ${testname} ${testname}_coverage)
+        endif ()
     endif ()
 endfunction()
 
@@ -123,7 +129,9 @@ if (CMAKE_VERSION VERSION_LESS 2.8.11)
 endif ()
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
+if (NOT CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
+endif ()
 
 add_subdirectory(Core)
 add_subdirectory(DataStructures)
