--- a/examples/EqnHandler/CMakeLists.txt
+++ b/examples/EqnHandler/CMakeLists.txt
@@ -7,10 +7,8 @@ endif ()
 
 add_example(EqnHandler EqnHandler.cpp)
 
-add_example(EqnHandler-MPI EqnHandler-MPI.cpp)
-target_compile_definitions(EqnHandler-MPI PRIVATE OPFLOW_DISTRIBUTE_MODEL_MPI)
+add_mpi_example(EqnHandler-MPI EqnHandler-MPI.cpp)
 
 add_example(EqnHandlerAMGCL EqnHandlerAMGCL.cpp)
 
-add_example(EqnHandlerAMGCL-MPI EqnHandlerAMGCL-MPI.cpp)
-target_compile_definitions(EqnHandlerAMGCL-MPI PRIVATE OPFLOW_DISTRIBUTE_MODEL_MPI)
+add_mpi_example(EqnHandlerAMGCL-MPI EqnHandlerAMGCL-MPI.cpp)
