[CI] Try to fix build with clang-12

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,7 +82,7 @@ if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     set(CMAKE_USE_WIN32_THREADS_INIT 0)
     set(CMAKE_USE_PTHREADS_INIT 1)
     set(THREADS_PREFER_PTHREAD_FLAG ON)
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++ -lc++abi")
+    #set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++ -lc++abi")
 endif ()
 
 # ----------------------------------------------------------------------------
@@ -271,6 +271,7 @@ else ()
         set(HYPRE_BUILD_TYPE Debug)
         set(HYPRE_WITH_OPENMP ${OPFLOW_WITH_OPENMP})
         set(HYPRE_ENABLE_SINGLE ${OPFLOW_SINGLE_PRECISION})
+        set(HYPRE_WITH_MPI ${OPFLOW_WITH_MPI})
         add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/hypre/src EXCLUDE_FROM_ALL)
         target_link_libraries(opflow INTERFACE HYPRE)
     endif ()
