--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -37,16 +37,18 @@ endif ()
 
 function(add_gmock testname testfile)
     add_executable(${testname} EXCLUDE_FROM_ALL ${testfile} ${ARGN} ${TEST_MAIN_CPP})
-    target_link_libraries(${testname} gmock opflow::opflow gcov)
-    target_compile_options(${testname} PRIVATE $<$<CXX_COMPILER_ID:GNU>:--coverage>
-            PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fconcepts-diagnostics-depth=5>
-            PRIVATE $<$<CXX_COMPILER_ID:Clang>:-fprofile-instr-generate -fcoverage-mapping>)
+    target_link_libraries(${testname} gmock opflow::opflow)
+    target_compile_definitions(${testname} PUBLIC OPFLOW_TEST_ENVIRONMENT)
     set_property(GLOBAL APPEND PROPERTY all_test_srcs ${testfile} ${ARGN})
     add_dependencies(AllTests ${testname})
     if (NOT ${testname} STREQUAL "UniTests")
         add_test(NAME ${testname} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${testname})
     endif ()
-    if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+    if (${CMAKE_BUILD_TYPE} STREQUAL "Debug" AND OPFLOW_ENABLE_CONVERAGE)
+        target_link_libraries(${testname} gcov)
+        target_compile_options(${testname} PRIVATE $<$<CXX_COMPILER_ID:GNU>:--coverage>
+                PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fconcepts-diagnostics-depth=5>
+                PRIVATE $<$<CXX_COMPILER_ID:Clang>:-fprofile-instr-generate -fcoverage-mapping>)
         SETUP_TARGET_FOR_COVERAGE(${testname}_coverage ${testname} ${testname}_coverage)
     endif ()
 endfunction()
@@ -62,11 +64,11 @@ endif ()
 function(add_gmock_mpi testname proccount testfile)
     if (OPFLOW_WITH_MPI)
         add_executable(${testname} EXCLUDE_FROM_ALL ${testfile} ${ARGN} ${TEST_MAIN_CPP})
-        target_link_libraries(${testname} gmock opflow::opflow gcov)
+        target_link_libraries(${testname} gmock opflow::opflow)
         target_compile_options(${testname} PRIVATE $<$<CXX_COMPILER_ID:GNU>:--coverage>
                 PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fconcepts-diagnostics-depth=5>
                 PRIVATE $<$<CXX_COMPILER_ID:Clang>:-fprofile-instr-generate -fcoverage-mapping>)
-        target_compile_definitions(${testname} PUBLIC OPFLOW_DISTRIBUTE_MODEL_MPI)
+        target_compile_definitions(${testname} PUBLIC OPFLOW_DISTRIBUTE_MODEL_MPI OPFLOW_TEST_ENVIRONMENT)
         set_property(GLOBAL APPEND PROPERTY all_test_srcs ${testfile} ${ARGN})
         add_dependencies(AllTests ${testname})
         if (proccount GREATER MPIEXEC_MAX_NUMPROCS)
@@ -77,7 +79,8 @@ function(add_gmock_mpi testname proccount testfile)
             add_test(NAME ${testname} COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${proccount}
                     ${MPIEXEC_PREFLAGS} ${CMAKE_CURRENT_BINARY_DIR}/${testname} ${MPIEXEC_POSTFLAGS})
         endif ()
-        if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+        if (${CMAKE_BUILD_TYPE} STREQUAL "Debug" AND OPFLOW_ENABLE_COVERAGE)
+            target_link_libraries(${testname} gcov)
             SETUP_TARGET_FOR_COVERAGE(${testname}_coverage ${testname} ${testname}_coverage)
         endif ()
     endif ()
